# base

./: .env  Cargo.toml  Dockerfile
src/: error.rs  main.rs  prelude.rs
src/model/: db.rs  mod.rs
src/rest/: application_info.rs  jwt.rs  middleware.rs  middleware1.rs  mod.rs
src/security/: mod.rs
src/todo/: mod.rs  model.rs  postgres_todo_repo.rs  todo_repo.rs  web.rs
src/user/: mod.rs  model.rs  postgres_user_repo.rs  user_repo.rs  web.rs
